feat: sku新增完成